# podbriefing

./: .env.example  .gitignore  README.md  podcast_analyzer.py  podcast_downloader.py  podcast_streamlit.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
migrations/: env.py
migrations/versions/: e2b33808ad25_initial.py
src/: main.py
src/db/: crud.py  models.py  session.py
src/tasks/: analyze.py  celery_app.py
