[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.41.1"
google-generativeai = "^0.8.3"
feedparser = "^6.0.11"
requests = "^2.32.3"
pydub = "^0.25.1"
narwhals = "^1.18.4"
audioop-lts = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
