[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
google-generativeai = "^0.8.3"
feedparser = "^6.0.11"
requests = "^2.32.3"
pydub = "^0.25.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
celery = "^5.4.0"
redis = "^5.2.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
